src/pages/styles/notes.css
.general-container {
	height: 80%;
	width: 80%;
	padding-left: 50px;
}

.notes-background {
	background-color: #ffffff;
	margin: 0;
	height: 100%;
	width: 70%;
	margin-left: 2%;
	margin-right: 28%;
}

.notes-header {
	font-size: 60;
	color: #1e3a8a;
	font-weight: bold;
	width: 28%;
	margin-left: 4%;
	border-bottom: 4px solid #1e3a8a;
}

.notes-container {
	display: flex;
	flex-grow: 1;
	padding: 40px;
	width: 100%;
	height: 70%;
	border-radius: 70px;
	background-color: #e0f2fe;
}

.notes-container-inside {
	background-color: #ffffff;
	width: 94%;
	height: 92%;
	padding-left: 3%;
	padding-right: 3%;
	padding-top: 2%;
	margin: 0%;
	padding-bottom: 3%;
}

.notes-filter-bar {
	font-size: 25px;
	margin-top: 0px;
	margin-left: 0px;
	margin-right: 0px;
	margin-bottom: 0px;
}

.notes-table-sections {
	display: flex;
	flex-direction: row;
	margin-left: 1rem;
	margin-right: 1rem;
}

.notes-table-sections-title {
	font-size: 17px;
	font-weight: 600;
	color: #000000;
	margin-top: 0px;
	display: flex;
	flex-direction: row;
	gap: 12px;
}

.table-section-note {
	width: 30%;
}

.table-section-specialist {
	width: 30%;
}

.table-section-patient {
	width: 20%;
}

.table-section-session {
	width: 20%;
}

.notes-list {
	display: flex;
	flex-direction: column;
	gap: 1rem;
	margin-top: 0px;
	margin-left: 0px;
	margin-right: 0px;
	margin-bottom: 0px;
}

.table-section-note-filter {
	margin: 0px;
	padding: 0px;
	background-color: #1e3a8a;
	border-radius: 5px;
	height: 2.5rem;
	width: 100%;
	display: flex;
	justify-content: center;
	align-items: center;
}

.dropdown_arrow {
	height: 2rem;
	width: 1.5rem;
	margin-left: 0rem;
	margin-top: 1.4rem;
}

.filter-by-button {
	background-color: transparent;
	border: none;
	width: fit-content;
	height: fit-content;
	margin: 0;
	padding: 0;
}

.filter-by-button:hover {
	background-color: transparent;
}

